--- a/app/views/logins/index.html.erb
+++ b/app/views/logins/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Login</h1>
+<h1>User Login</h1>
 <section id="page">
-<form class="form" action="/signup" method="post">
+<form class="form" action="/logins" method="post">
   <div class="input-field">
     <input type="text" name="user[username]" id="username">
     <label for="username">Username</label>
